This modification fixs the problem with the white space to the right on pages.
http://trac.centreon.com/ticket/30

Thank you carlos!

git-svn-id: http://svn.centreon.com/trunk/centreon@5314 6bcd3966-0018-0410-8128-fd23d134de7e

--- a/www/Themes/Centreon-2/style.css
+++ b/www/Themes/Centreon-2/style.css
@@ -210,7 +210,7 @@ hr	{
 	width:150px;	
 	text-align:right;
 	top:110px;
-	right:-98px;
+	right:0px;
 	font-weight: bold;}
 
 #linkBar img {
